kube/collector-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: enoch-server
  name: otel-collector-deployment-enoch
  labels:
    app: otel-collector-enoch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otel-collector-enoch
  template:
    metadata:
      labels:
        app: otel-collector-enoch
    spec:
      containers:
      - name: otel-collector-enoch
        image: otel/opentelemetry-collector-contrib:0.75.0
        ports:
        - containerPort: 4317    
        volumeMounts:
        - name: otel-config-volume
          mountPath: /etc/otelcol-contrib/config.yaml
          subPath: otel-collector-config.yml #chatgpt stuff idk lol
      volumes: 
      - name: otel-config-volume
        configMap:
          name: otel-config
