kube/collector-svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: enoch-server
  name: otel-collector-service-enoch
spec:
  type: ClusterIP
  selector:
    app: otel-collector-enoch
  ports:
    - port: 4317
      targetPort: 4317
