kube/grafana-svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: enoch-server
  name: grafana-service-enoch
spec:
  type: ClusterIP
  selector:
    app: grafana-enoch
  ports:
    - port: 3000
      targetPort: 3000
