kube/loki-svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: enoch-server
  name: loki-service-enoch
spec:
  type: ClusterIP
  selector:
    app: loki-enoch
  ports:
    - port: 3100
      targetPort: 3100
