kube/grafana-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: enoch-server
  name: grafana-ingress-enoch
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.enoch-kubernetes2.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-service-enoch
            port:
              number: 3000
