kube/web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: enoch-server
  name: blazor-web-ingress-enoch
spec:
  ingressClassName: nginx
  rules:
  - host: enoch-kubernetes2.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blazor-web-service-enoch
            port:
              number: 80
